<resources>
    ources>
    <string name="app_name">Fousa</string>
    <string name="title_activity_maps">Fousa</string>
    <string name="txt_not_enough_money">Pas assez d\'argent pour recharger</string>
    <string name="txt_successfully_recharged">Rechargé avec succès</string>

    <string name="Q1">Comment puis-je obtenir l\'estimation du prix d\'une course?</string>
    <string name="A1">Sur le page d\'acceuil, précisez le lieu de départ et la destination, vous aurez ensuite l\'estimation du tarif* de la course en bas de l\'écran à droite.\n\n*Le tarif peut varier selon le trafic routier.</string>
    <string name="Q2">Ou puis-je trouver les tarifs pour COMINGOO?</string>
    <string name="A2">Les tarifs sont indiqué dans la section \'Comingoo and you\' dans le volet \'paramétres\'</string>

    <string name="sinch_key">185d9822-a953-4af6-a780-b0af1fd31bf7</string>
    <string name="sinch_app_secret">ZiJ6FqH5UEWYbkMZd1rWbw==</string>
    <string name="sinch_envirenment">sandbox.sinch.com</string>
    <string name="waze_urlt">https://play.google.com/store/apps/details?id=com.waze</string>
    <string name="payement_par_carte_banquaire">Payement par carte banquaire</string>
    <string name="esp_ces_collect_es">Espéces collectées</string>
    <string name="montant_total_collecter">Montant total à collecter</string>
    <string name="evaluez_votre_xperience">Evaluez votre éxperience</string>
    <string name="vous_avez_manque_une_course_etes_vous_occupe">Vous Avez manque une course.Etes vous occupe?</string>
    <string name="rester_en_ligne">Rester en ligne</string>
    <string name="passer_hors_ligne">Passer hors ligne</string>
    <string name="are_you_sure_you_want_to_cancel_the_ride">Êtes-vous sûr de vouloir annuler le trajet?</string>
    <string name="addition_charges_may_apply">Des frais supplémentaires peuvent s\'appliquery</string>
    <string name="no_i_don_t_want_to_cancel">Non, je ne veux pas annuler</string>
    <string name="yes_i_am_sure">Oui je suis sûr</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="vous_avez_deja_un_compte">Vous avez deja un compte ?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="bon_client">Bon Client</string>
    <string name="refuser">Refuser</string>
    <string name="accepter">Accepter</string>
    <string name="vous_tes_hors_ligne">Vous étes hors ligne</string>
    <string name="vous_tes_en_ligne">Vous étes en ligne</string>
    <string name="se_deconnecter">Se deconnecter</string>
    <string name="aide">Aide</string>
    <string name="inbox">Boîte de réception</string>
    <string name="historique">Historique</string>
    <string name="acceuil">Acceuil</string>
    <string name="appelle_telephonique">Appelle telephonique</string>
    <string name="appelle_voip">Appelle VOIP</string>
    <string name="appuyez_pour_arriver">Appuyez pour arriver</string>
    <string name="_0_0_mad">0.0 MAD</string>
    <string name="todo">TODO</string>
    <string name="txt_driver_arrive">Appuyez pour arriver</string>
    <string name="txt_tap_to_start">Appuyez pour commancer</string>
    <string name="txt_finish_course">Appuyez pour terminer</string>
    <string name="txt_highest_ten_mad" translatable="false">Vous ne pouvez pas dépasser 10 MAD de recharge pour ce client.</string>
    <string name="txt_highest_hundrad_mad" translatable="false">Vous ne pouvez pas dépasser 100 MAD de recharge pour ce client.</string>
    <string name="recharger">Recharger</string>
    <string name="mad">MAD</string>
    <string name="hide_it_for_now_because_requirment_is_chage">Hide it for now because requirment is chage</string>
    <string name="kilomiter">Kilomiter</string>
    <string name="chauffeur">Chauffeur</string>
    <string name="temps_d_attam">Temps d`attam</string>
    <string name="txt_new_client">Nouveau Client</string>
    <string name="txt_potential_client">Client Potential</string>
    <string name="txt_bon_client">Bon Client</string>

</resources>
