<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_round_background"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_sure_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_cancel_the_ride"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_addition_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sure_text"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:text="@string/addition_charges_may_apply"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_addition_charge"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_dont_cancel_ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_i_don_t_want_to_cancel"
            android:textSize="12sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_yes_cancel_ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingLeft="20dp"
            android:textSize="12sp"
            android:paddingRight="20dp"
            android:layout_toEndOf="@id/btn_dont_cancel_ride"
            android:text="@string/yes_i_am_sure"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"/>

    </RelativeLayout>
</RelativeLayout>