<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CommandActivity">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <com.comingoo.driver.fousa.utility.RoundedLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true">

            <fragment
                android:id="@+id/map_command"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_margin="3dp"
                android:background="@drawable/drawable_circle_dark_blue" />
        </com.comingoo.driver.fousa.utility.RoundedLayout>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:background="@drawable/dot_bg" />

        <ProgressBar
            android:id="@+id/barTimer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="15"
            android:progress="15"
            android:progressDrawable="@drawable/green_circular" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_centerHorizontal="true"
        android:text="@string/bon_client"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/constr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constr"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:layout_marginRight="@dimen/margin_xxlarge"
        android:gravity="center"
        android:text="asdfasdfasf"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:layout_marginRight="@dimen/margin_xxlarge"
        android:gravity="center"
        android:text="Start tet"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:layout_marginRight="@dimen/margin_xxlarge"
        android:gravity="center"
        android:text="End tet"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/refuser_bt"
                android:text="@string/refuser"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/accepter_bt"
                android:text="@string/accepter"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/bt" />
    </RelativeLayout>

</RelativeLayout>