<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="100dp"
            android:layout_height="187dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:visibility="visible">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="29 MAD"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/time_tv"
                android:layout_alignStart="@+id/time_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:text="7/23/2018"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:text="07:59 PM"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="84dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/constraintLayout2"
            android:background="@drawable/icon_address" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/imageView4"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Départ"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/depart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="210dp"
                android:text="Ma Position"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView4"
            android:layout_toEndOf="@+id/imageView4"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Destination"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="210dp"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/constraintLayout2"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/constraintLayout2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kilomiter"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/km2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="12km"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/temps_d_attam"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/waitTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="8 min"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chauffeur"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="Mohammad Bin"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>